
   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl

--1.75.29--

   *	Upgraded SQLite to 3.8.4.3

  !!	Back out a PDQ change from 1.75.19 (b8ea01d8d3b) for CNAME->MX 
	chain processing that broke CNAME loop and depth detection
	and caused an infinite loop crash. Reported by Steven Freegard.

--1.75.28--

   *	Upgraded SQLite to 3.8.4.2

   *	Updated the TLD list.

   !	Added configure checks for some newer C99/C11 int types.

  !!    Fix problem with socket3_end_tls() handling of SSL_shutdown()
	driving CPU high on some systems.

--1.75.27--

  !!	Fix socket3_close_tls() and socket3_shutdown_tls() to both use
	socket3_end_tls() when terminating TLS connections. 

   !	Fixed socket3_close_fd() read/discard loop to use socket3_read_fd(),
	instead of socket3_read() to avoid the read hook call.

--1.75.26--

   *    Upgraded SQLite to 3.8.1.0

   !	Minor fixes to aclocal.m4 libmilter detection for debian.

  !!	Fix numerous gcc compiler warnings. In particular fixed
	potential SPF seg.fault due to uninitialised variable. Also
	fixed potential seg.fault or inifinite loop in events_wait_*()
	when an error happens and longjmp is performed to process the
	next event. Reported by Guenter Grodotzki.

--1.75.25--

   !	Fix SNERT_BERKELEY_DB handling of $d/include when there are no
	child db directories; particularly relevant when only BDB 1.85
	is installed (FreeBSD, NetBSD) caused and empty shell variable
	to generate an error.

   !	Added packet dump logging in pdq_name_copy() for buffer under/over
	errors in order to determine whether packets are mailformed (OxC0
	compression) or internal error. Reported by Alex Broens.


--1.75.24--

   *    Upgraded SQLite to 3.8.0.2

   !	Updated SNERT_BUILD_THREADED_SQLITE3 for latest SQLite build.

   ! 	Minor addition to ansi tool.
